--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,10 @@
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open Sans:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Work Sans:100,200,300,400,500,600,700,800,900">
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Heebo:100,200,300,400,500,600,700,800,900">
+    
+    <!-- when loading raw JS -->
+    <script type="module"></script>
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
